--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" contentte;}"width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>aqui vai ser uma imagen</h1>
-</body>
-</html>
+</ul>
+    <li>Estudante<li>
+    <li>Escola<li>
+</ul>
+</header>
