--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" contentte;}"width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+</header class="cabecedalho">
+    <img class=""cabeccedalho-imagem" src="="./img/alurastart logo 1.png"alt="logo da alura
+    start">
+    <u! class=""cabecedalho-lista-item">
+        <li class=""cabecedalho-lista-item">Estudante</li>
+        <li class=""cabecedalho-lista-item"<Escola</li>
+    </ul>        
 <body>
     <h1>aqui vai ser uma imagen</h1>
 </ul>
